samples/stable-diffusion-cpu/manifests/app-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stable-diffusion-cpu
  name: stable-diffusion-cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stable-diffusion-cpu
  template:
    metadata:
      labels:
        app: stable-diffusion-cpu
      annotations:
        kubectl.kubernetes.io/default-container: stable-diffusion-cpu
    spec:
      containers:
      - image: ghcr.io/kedify/stable-diffusion-cpu
        name: stable-diffusion-cpu
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - name: shared-images
          mountPath: /app/results
      - image: minio/mc
        name: minio-sidecar
        command: ["/bin/sh", "-c"]
        args:
        - |
          mc alias set shared http://minio:9000 $MINIO_USERNAME $MINIO_PASSWORD;
          mc admin info shared;
          echo "Minio configured, starting sync.."
          mc mirror --watch /images shared/images;

        volumeMounts:
        - name: shared-images
          mountPath: /images
      # if possible, spread the pods across all schedulable nodes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: stable-diffusion-cpu
      volumes:
      - name: shared-images
        emptyDir: {}
